# shell

./: CMakeLists.txt  README.md  flake.nix
components/: AnimLoader.qml  ConnectionHeader.qml  ConnectionInfoSection.qml  MaterialIcon.qml  PropertyRow.qml  SectionContainer.qml  SectionHeader.qml  StateLayer.qml  StyledText.qml
components/containers/: VerticalFadeFlickable.qml
components/controls/: ButtonBase.qml  CircularIndicator.qml  CircularProgress.qml  (+21 more)
config/: BackgroundConfig.qml  BarConfig.qml  GeneralConfig.qml  LockConfig.qml  ServiceConfig.qml
modules/: Shortcuts.qml
nix/: default.nix
plugin/src/Caelestia/: CMakeLists.txt  cutils.cpp  cutils.hpp
plugin/src/Caelestia/Blobs/: blobshape.cpp
plugin/src/Caelestia/Blobs/shaders/: blob.frag
plugin/src/Caelestia/Components/: CMakeLists.txt  buttonrow.cpp  buttonrow.hpp  wavyline.cpp
plugin/src/Caelestia/Config/: CMakeLists.txt  appearanceconfig.cpp  appearanceconfig.hpp  config.cpp  config.hpp  configattached.cpp  configattached.hpp  font.cpp  font.hpp  fontbuilder.cpp  fontbuilder.hpp  lockconfig.hpp  nexusconfig.hpp  serviceconfig.hpp  tokens.hpp
plugin/src/Caelestia/Images/: CMakeLists.txt  cachingimageprovider.cpp  cachingimageprovider.hpp  iutils.cpp
plugin/src/Caelestia/Internal/: CMakeLists.txt
plugin/src/Caelestia/Services/: CMakeLists.txt  gpu.cpp  lyriccandidate.cpp  lyriccandidate.hpp  lyrics.cpp  lyrics.hpp  memory.cpp  memory.hpp  storage.cpp  storage.hpp  usagefmt.cpp  usagefmt.hpp
services/: Colours.qml  Notifs.qml  SystemUsage.qml  Time.qml  Wallpapers.qml  Weather.qml
(+188 files in other folders)
